[workspace]
members = [
  "crates/notmarkdown-cli",
  "crates/notmarkdown-core",
  "crates/notmarkdown-lsp",
  "crates/notmarkdown-package",
  "crates/notmarkdown-tui"
]
resolver = "3"

[workspace.package]
version = "0.12.0"
edition = "2024"
license = "MIT"
rust-version = "1.97"

[workspace.dependencies]
crossterm = "=0.29.0"
ratatui = { version = "=0.30.2", default-features = false, features = ["crossterm"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
unicode-casefold = "=0.2.0"
unicode-normalization = "=0.1.25"
zip = { version = "=8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs", "zstd"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
