[package]
name = "notmarkdown-package"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Safe streaming package reader and repacker for NotMarkdown 0.1"

[dependencies]
notmarkdown-core = { path = "../notmarkdown-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zip.workspace = true

