[package]
name = "notmarkdown-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cross-platform terminal editor for NotMarkdown"

[[bin]]
name = "notmd-tui"
path = "src/main.rs"

[dependencies]
crossterm.workspace = true
notmarkdown-core = { path = "../notmarkdown-core" }
notmarkdown-package = { path = "../notmarkdown-package" }
ratatui.workspace = true
serde_json.workspace = true

